# AutoFilm

./: Cargo.toml  requirements.txt
config/: config.example.yaml
src/: config.rs  library_poster.rs  media_server.rs  schedule.rs
src/library_poster/: config.rs  renderer.rs  runner.rs
src/library_poster/config/: resolution.rs
src/library_poster/renderer/: blur.rs  card.rs  collage.rs  split.rs  utils.rs
src/media_server/: client.rs  error.rs  models.rs
src/schedule/: utils.rs
